--- a/MotorcycleDeliveryRentWebAPI/appsettings.json
+++ b/MotorcycleDeliveryRentWebAPI/appsettings.json
@@ -2,7 +2,8 @@
   "CnhImageStoragePath": "C:\\Users\\Theodoro\\Documents\\Projetos",
 
   "RabbitMQ": {
-    "HostName": "localhost",
+    //"HostName": "localhost",
+    "HostName": "rabbitmq",
     "Port": 5672,
     "UserName": "admin",
     "Password": "admin"
@@ -13,7 +14,8 @@
   },
 
   "MongoDBSettings": {
-    "ConnectionString": "mongodb://admin:admin@localhost:27017/",
+    //"ConnectionString": "mongodb://admin:admin@localhost:27017",
+    "ConnectionString": "mongodb://admin:admin@mongo:27017",
     "DatabaseName": "MotorcycleDeliveryRentalBD"
   },
 
