--- a/MotorcycleDeliveryRentWebAPI/appsettings.Development.json
+++ b/MotorcycleDeliveryRentWebAPI/appsettings.Development.json
@@ -4,5 +4,18 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Authentication": {
+    "Schemes": {
+      "Bearer": {
+        "ValidAudiences": [
+          "http://localhost:43199",
+          "https://localhost:44397",
+          "http://localhost:5017",
+          "https://localhost:7009"
+        ],
+        "ValidIssuer": "dotnet-user-jwts"
+      }
+    }
   }
 }
