--- a/MotorcycleDeliveryRentWebAPI/MotorcycleDeliveryRentWebAPI.csproj
+++ b/MotorcycleDeliveryRentWebAPI/MotorcycleDeliveryRentWebAPI.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="7.5.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.6" />
     <PackageReference Include="MongoDB.Driver" Version="2.24.0" />
+    <PackageReference Include="Moq" Version="4.20.70" />
     <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="8.0.1" />
