[Moto-01] ELK Addition

--- a/MotorcycleDeliveryRentWebAPI/appsettings.json
+++ b/MotorcycleDeliveryRentWebAPI/appsettings.json
@@ -19,12 +19,19 @@
     "DatabaseName": "MotorcycleDeliveryRentalBD"
   },
 
-  "Logging": {
-    "LogLevel": {
-      "Default": "Debug",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Information",
+        "System": "Warning"
+      }
     }
+  },
+
+  "ElasticConfiguration": {
+    //"Uri": "http://localhost:9200",
+    "Uri": "http://elasticsearch:9200"
   },
 
   "AllowedHosts": "*"
