--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,8 +34,39 @@ services:
     volumes:
       - mongodb_data_container:/data/db
 
+  elasticsearch:
+    container_name: elasticsearch
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.13.1
+    ports:
+      - 9200:9200
+    volumes:
+      - elasticsearch-data:/usr/share/elasticsearch/data
+    environment:
+      - xpack.security.enabled=false
+      - discovery.type=single-node
+    networks:
+      - elastic
+
+  kibana:
+    container_name: kibana
+    image: docker.elastic.co/kibana/kibana:8.13.1
+    ports:
+      - 5601:5601
+    depends_on:
+      - elasticsearch
+    networks:
+      - elastic
+  
+networks:
+  elastic:
+    driver: bridge
+
 volumes:
   mongodb_data_container:
+  elasticsearch-data:
+  rabbitmq_data:
 
 
-# mongodb://admin:admin@localhost:27017  #RabbitMQ    http://localhost:15672
+# MongoDB     mongodb://admin:admin@localhost:27017 
+# RabbitMQ    http://localhost:15672
+# ELK         http://localhost:5601
